--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
   "scripts": {
     "build": "webpack",
     "serve": "webpack serve"
+  },
+  "dependencies": {
+    "vue-loader": "^17.0.0",
+    "vue-template-compiler": "^2.6.14"
   }
 }
