--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "devDependencies": {
     "@babel/core": "^7.18.5",
     "@babel/preset-env": "^7.18.2",
+    "@vue/compiler-sfc": "^3.2.37",
     "babel-loader": "^8.2.5",
     "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
@@ -23,6 +24,7 @@
     "serve": "webpack serve"
   },
   "dependencies": {
+    "vue": "^3.2.36",
     "vue-loader": "^17.0.0",
     "vue-template-compiler": "^2.6.14"
   }
